package SmartHome.domain.valueObjects;

public class Floor {
}
