@startuml


class Room <root> {
    - _roomName: RoomName
    - _houseID: HouseID
    + houseFloor: Floor
    + dimensions: Dimensions
    + Room(rooName: RoomName, houseID: HouseID, houseFloor: Floor, dimensions:Dimensions): Room
    - validateArguments(_roomName: RoomName,houseID:HouseID, houseFloor: Floor, dimensions:Dimensions): boolean
    + equals(object: Object): boolean
    + sameAs(object: Object): boolean
    + getRoomName(): RoomName
    + gethouseFloor(): Floor
    + getDimensions(): Dimensions
    + toString(): String
}

package valueObject {
    class RoomName <vo> {
        - _name: String
        + RoomName(name: String): RoomName
        + equals(object: Object): boolean
        + toString(): String
    }
    class HouseID <vo> {
        - _id: String
        + HouseID(id: String): HouseID
        + getID(): String
        + equals(object: Object): boolean
        + toString(): String
    }
    class Floor <vo> {
        - _floor: int
        + Floor(floor: int): Floor
        + equals(object: Object): boolean
        + toString(): String
    }
    class Dimensions <vo> {
        - _width: int
        - _length: int
        + Dimensions(width: int, length: int): Dimensions
        + equals(object: Object): boolean
        + toString(): String
    }
}

class RoomRepository {
    - roomRepository: List<Room>
    + save(room: Room): void
    + findByHouseID(houseID: HouseID): Room
    + findByRoomName(roomName: RoomName): Room
    + findByHouseIDAndRoomName(houseID: HouseID, roomName: RoomName): Room
}

class RoomFactory {
    - roomRepository: RoomRepository
    - houseRepository: HouseRepository
    + RoomFactory(roomRepository: RoomRepository, houseRepository: HouseRepository): RoomFactory
    + createRoom(roomName: RoomName, houseID: HouseID, houseFloor: Floor, dimensions: Dimensions): Room
}

class Device {
    - ...
}

class House {
    - ...
}

RoomRepository "1" --> "1" RoomFactory
RoomFactory "1" --> "*" Room
Room "1" --> "1" RoomName : uses
Room "1" --> "1" HouseID : uses
Room "1" --> "1" Floor : uses
Room "1" --> "1" Dimensions : uses
Room "1" --> "*" Device : has
Device "1" --> "1" RoomName : knows
House "1" -left-> "*" Room : has
House "1" --> "1" HouseID : uses

@enduml